examples/invalid/uppercase_true.jasn
// Uppercase True (should be lowercase)
{
  bad: True
}
